--- a/styles/style.css
+++ b/styles/style.css
@@ -24,10 +24,42 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 80px;
 }
 
 .logo {
     max-width: 230px;
+    height: 100%;
+}
+
+.menu_header {
+    display: none;
+}
+
+.header_mobile_open {
+    overflow: hidden;
+}
+
+.header_mobile_open .menu_header {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: calc(100% - 80px);
+}
+
+.header_mobile_open .menu_header > ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: lightgray;
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
 }
 
 .menu_header > ul {
@@ -38,6 +70,10 @@ a:hover {
 
 .menu_header-sous_menu {
     display: none;
+}
+
+.menu_burger_icon > svg {
+    width: 20px;
 }
 
 .banner {
