--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -9,6 +9,17 @@
         padding: 40px 60px;
         background-color: green;
     }
+
+    .menu_footer > ul {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
+    }
+
+    .menu_footer li.menu_footer-item_parent {
+        width: calc((100% - 40px) / 3);
+    }
 }
 
 @media (min-width: 900px) { /* format ordi */
